--- a/ConfigSystem.cfg
+++ b/ConfigSystem.cfg
@@ -5,8 +5,8 @@
 "testFloat"="3.0"
 "testDouble"="4.0"
 
-"hotkey.1"="empty"
-"hotkey.name1"="empty"
+"hotkey.1"="https://www.google.de/maps"
+"hotkey.name1"="Google Maps"
 
 "hotkey.2"="empty"
 "hotkey.name2"="empty"
