--- a/ConfigSystem.cfg
+++ b/ConfigSystem.cfg
@@ -5,92 +5,97 @@
 "testFloat"="3.0"
 "testDouble"="4.0"
 
+//STEAM HOTKEYS
 "hotkey.1"="https://www.google.de/maps"
 "hotkey.name1"="Google Maps"
 
 "hotkey.2"="empty"
-"hotkey.name2"="empty"
+"hotkey.name2"="Nicht Belegt"
 
 "hotkey.3"="empty"
-"hotkey.name3"="empty"
+"hotkey.name3"="Nicht Belegt"
 
 "hotkey.4"="empty"
-"hotkey.name4"="empty"
+"hotkey.name4"="Nicht Belegt"
 
 "hotkey.5"="empty"
-"hotkey.name5"="empty"
+"hotkey.name5"="Nicht Belegt"
 
 "hotkey.6"="empty"
-"hotkey.name6"="empty"
+"hotkey.name6"="Nicht Belegt"
 
 "hotkey.7"="empty"
-"hotkey.name7"="empty"
+"hotkey.name7"="Nicht Belegt"
 
 "hotkey.8"="empty"
-"hotkey.name8"="empty"
+"hotkey.name8"="Nicht Belegt"
 
 "hotkey.9"="empty"
-"hotkey.name9"="empty"
+"hotkey.name9"="Nicht Belegt"
 
 "hotkey.10"="empty"
-"hotkey.name10"="empty"
+"hotkey.name10"="Nicht Belegt"
 
 "hotkey.11"="empty"
-"hotkey.name11"="empty"
+"hotkey.name11"="Nicht Belegt"
 
 "hotkey.12"="empty"
-"hotkey.name12"="empty"
+"hotkey.name12"="Nicht Belegt"
 
 "hotkey.13"="empty"
-"hotkey.name13"="empty"
+"hotkey.name13"="Nicht Belegt"
 
 "hotkey.14"="empty"
-"hotkey.name14"="empty"
+"hotkey.name14"="Nicht Belegt"
 
 "hotkey.15"="empty"
-"hotkey.name15"="empty"
+"hotkey.name15"="Nicht Belegt"
 
+//UPLAY HOTKEYS
 "hotkey.16"="empty"
-"hotkey.name16"="empty"
+"hotkey.name16"="Nicht Belegt"
 
 "hotkey.17"="empty"
-"hotkey.name17"="empty"
+"hotkey.name17"="Nicht Belegt"
 
 "hotkey.18"="empty"
-"hotkey.name18"="empty"
+"hotkey.name18"="Nicht Belegt"
 
 "hotkey.19"="empty"
-"hotkey.name19"="empty"
+"hotkey.name19"="Nicht Belegt"
 
 "hotkey.20"="empty"
-"hotkey.name20"="empty"
+"hotkey.name20"="Nicht Belegt"
 
+//ORIGIN
 "hotkey.21"="empty"
-"hotkey.name21"="empty"
+"hotkey.name21"="Nicht Belegt"
 
 "hotkey.22"="empty"
-"hotkey.name22"="empty"
+"hotkey.name22"="Nicht Belegt"
 
 "hotkey.23"="empty"
-"hotkey.name23"="empty"
+"hotkey.name23"="Nicht Belegt"
 
 "hotkey.24"="empty"
-"hotkey.name24"="empty"
+"hotkey.name24"="Nicht Belegt"
 
 "hotkey.25"="empty"
-"hotkey.name25"="empty"
+"hotkey.name25"="Nicht Belegt"
 
+//ROCKSTARGAMES
 "hotkey.26"="empty"
-"hotkey.name26"="empty"
+"hotkey.name26"="Nicht Belegt"
 
 "hotkey.27"="empty"
-"hotkey.name27"="empty"
+"hotkey.name27"="Nicht Belegt"
 
+//BATTLENET
 "hotkey.28"="empty"
-"hotkey.name28"="empty"
+"hotkey.name28"="Nicht Belegt"
 
 "hotkey.29"="empty"
-"hotkey.name29"="empty"
+"hotkey.name29"="Nicht Belegt"
 
 "hotkey.30"="empty"
-"hotkey.name30"="empty"
+"hotkey.name30"="Nicht Belegt"
