--- a/ConfigSystem.cfg
+++ b/ConfigSystem.cfg
@@ -90,7 +90,7 @@
 "hotkey.27"="empty"
 "hotkey.name27"="Nicht Belegt"
 
-//BATTLENET
+
 "hotkey.28"="empty"
 "hotkey.name28"="Nicht Belegt"
 
@@ -99,3 +99,36 @@
 
 "hotkey.30"="empty"
 "hotkey.name30"="Nicht Belegt"
+
+//BATTLENET 
+"hotkey.31"="empty"
+"hotkey.name31"="Nicht Belegt"
+
+"hotkey.32"="empty"
+"hotkey.name32"="Nicht Belegt"
+
+"hotkey.33"="empty"
+"hotkey.name33"="Nicht Belegt"
+
+"hotkey.34"="empty"
+"hotkey.name34"="Nicht Belegt"
+
+"hotkey.35"="empty"
+"hotkey.name35"="Nicht Belegt"
+
+//Sonstiges
+"hotkey.36"="empty"
+"hotkey.name36"="Nicht Belegt"
+
+"hotkey.37"="empty"
+"hotkey.name37"="Nicht Belegt"
+
+"hotkey.38"="empty"
+"hotkey.name38"="Nicht Belegt"
+
+"hotkey.39"="empty"
+"hotkey.name39"="Nicht Belegt"
+
+"hotkey.40"="empty"
+"hotkey.name40"="Nicht Belegt"
+
