--- a/ConfigSystem.cfg
+++ b/ConfigSystem.cfg
@@ -5,7 +5,7 @@
 "testFloat"="3.0"
 "testDouble"="4.0"
 
-//STEAM HOTKEYS
+#STEAM HOTKEYS
 "hotkey.1"="https://www.google.de/maps"
 "hotkey.name1"="Google Maps"
 
@@ -51,7 +51,7 @@
 "hotkey.15"="empty"
 "hotkey.name15"="Nicht Belegt"
 
-//UPLAY HOTKEYS
+#UPLAY HOTKEYS
 "hotkey.16"="empty"
 "hotkey.name16"="Nicht Belegt"
 
@@ -67,7 +67,7 @@
 "hotkey.20"="empty"
 "hotkey.name20"="Nicht Belegt"
 
-//ORIGIN
+#ORIGIN
 "hotkey.21"="empty"
 "hotkey.name21"="Nicht Belegt"
 
@@ -83,7 +83,7 @@
 "hotkey.25"="empty"
 "hotkey.name25"="Nicht Belegt"
 
-//ROCKSTARGAMES
+#ROCKSTARGAMES
 "hotkey.26"="empty"
 "hotkey.name26"="Nicht Belegt"
 
@@ -100,7 +100,7 @@
 "hotkey.30"="empty"
 "hotkey.name30"="Nicht Belegt"
 
-//BATTLENET 
+#BATTLENET 
 "hotkey.31"="empty"
 "hotkey.name31"="Nicht Belegt"
 
@@ -116,7 +116,7 @@
 "hotkey.35"="empty"
 "hotkey.name35"="Nicht Belegt"
 
-//Sonstiges
+#Sonstiges
 "hotkey.36"="empty"
 "hotkey.name36"="Nicht Belegt"
 
