--- a/ConfigSystem.cfg
+++ b/ConfigSystem.cfg
@@ -6,8 +6,8 @@
 "testDouble"="4.0"
 
 #STEAM HOTKEYS
-"hotkey.1"="https://www.google.de/maps"
-"hotkey.name1"="Google Maps"
+"hotkey.1"="empty"
+"hotkey.name1"="Nicht Belegt"
 
 "hotkey.2"="empty"
 "hotkey.name2"="Nicht Belegt"
