--- a/ConfigSystem.cfg
+++ b/ConfigSystem.cfg
@@ -116,7 +116,7 @@
 "hotkey.35"="empty"
 "hotkey.name35"="Nicht Belegt"
 
-#Sonstiges
+#Sonstiges|Lokale verknüpfung
 "hotkey.36"="empty"
 "hotkey.name36"="Nicht Belegt"
 
@@ -131,4 +131,21 @@
 
 "hotkey.40"="empty"
 "hotkey.name40"="Nicht Belegt"
+
+#Sonstiges|Internetverknüpfung
+
+"hotkey.41"="empty"
+"hotkey.name41"="Nicht Belegt"
+
+"hotkey.42"="empty"
+"hotkey.name42"="Nicht Belegt"
+
+"hotkey.43"="empty"
+"hotkey.name43"="Nicht Belegt"
+
+"hotkey.44"="empty"
+"hotkey.name44"="Nicht Belegt"
+
+"hotkey.45"="empty"
+"hotkey.name45"="Nicht Belegt"
 
